fixed margins/spacing

--- a/trophies/style.css
+++ b/trophies/style.css
@@ -74,7 +74,7 @@ header {
 }
 
 main {
-  margin-top: 7.1%;
+  margin-top: 7.8%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -115,6 +115,7 @@ main {
 .badges {
   width: 100%;
   height: 69.2vh;
+  margin-top: 2%;
   background-color: rgba(0, 0, 0, 0.85);
   display: flex;
   flex-direction: column;
